cmake_minimum_required(VERSION 2.8)

SET(CMAKE_AUTOMOC TRUE)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(Boost_USE_STATIC_LIBS ON)
SET(Boost_USE_MULTITHREADED ON)
SET(Boost_USE_STATIC_RUNTIME OFF)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")


SET(PSKSnmp_SOURCES PSKSnmp.cpp main.cpp)
SET(PSKSnmp_HEADERS PSKSnmp.h snmplib.h)

FIND_PACKAGE(MSGLib REQUIRED)
INCLUDE_DIRECTORIES( ${MSGLIB_INCLUDE_DIR})

FIND_PACKAGE(NetSNMP REQUIRED)
INCLUDE_DIRECTORIES( ${NETSNMP_INCLUDE_DIR})

FIND_PACKAGE(Boost REQUIRED COMPONENTS iostreams regex thread system)
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIRS})


ADD_EXECUTABLE( PSKSnmp ${PSKSnmp_SOURCES} ${PSKSnmp_HEADERS})

TARGET_LINK_LIBRARIES(PSKSnmp ${Boost_LIBRARIES} ${NETSNMP_LIBRARIES} ${MSGLIB_LIBRARY}  pthread)

INSTALL(TARGETS PSKSnmp RUNTIME DESTINATION bin)
